--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "history": "^5.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
+    "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
